# webgpu_volunteer_computing

./: .gitignore  README.md  docker-compose.yml  generate-certs.sh  workload1_bigger_matrix_input.txt
native_client/: CMakeLists.txt  Dockefile  Dockefile-cpu  main.cpp  test_frameworks.sh  whole_code.txt
native_client/cling/: cling_executor.cpp  cling_executor.hpp
native_client/common/: base64.cpp  base64.hpp  build_config.hpp.in  framework_client.cpp  framework_client.hpp  websocket_client.cpp  websocket_client.hpp
native_client/cpp/: cpp_executor.cpp  cpp_executor.hpp
native_client/cuda/: cuda_executor.cpp  cuda_executor.hpp
native_client/kernels_smoke/: cuda_smoke.cu  opencl_smoke.cl  vulkan_smoke.comp  webgl_smoke.glsl  webgpu_neural_network.wgsl  webgpu_smoke.wgsl
native_client/listener/: CMakeLists.txt  gpu_listener.cpp  gpu_listener.hpp
native_client/opencl/: opencl_executor.cpp  opencl_executor.hpp
native_client/vulkan/: vulkan_executor.cpp  vulkan_executor.hpp
server/: Dockerfile  chunkable_matmul.wgsl  headless-client.js  logger.js  package.json  server.js  timing.js
server/certificates/: cert.pem  key.pem
server/examples/shaders/: matmul.wgsl
server/examples/shaders/matrix_tiled/: cuda.cu  opencl.cl  vulkan.comp  webgl.glsl  webgpu.wgsl
server/examples/strategies/: BitonicSortChunking.js  ImageBlendChunking.js  MatrixTiledAssemblyStrategy.js  MatrixTiledChunkingStrategy.js
server/kernels/: block_matrix_multiply_cuda_kernel.cu  block_matrix_multiply_cuda_kernel2.cu  block_matrix_multiply_javascript_kernel.js  block_matrix_multiply_opencl_kernel.cl  block_matrix_multiply_webgl_fragment.glsl  block_matrix_multiply_webgl_vertex.glsl  block_matrix_multiply_webgpu_compute.wgsl
server/kernels/ECMStage1/: ecm_stage1_cuda_kernel.cu  ecm_stage1_javascript_kernel.js  ecm_stage1_opencl_kernel.cl  ecm_stage1_vulkan_compute.glsl  ecm_stage1_webgl_fragment.glsl  ecm_stage1_webgl_vertex.glsl  ecm_stage1_webgpu_compute.wgsl
server/kernels/block_matrix_multiply/: block_matrix_multiply_cuda_kernel.cu  block_matrix_multiply_vulkan_compute.glsl
server/kernels/sorting/: sorting_cuda_kernel.cu  sorting_opencl_kernel.cl  sorting_vulkan_compute.glsl  sorting_webgpu_compute.wgsl
server/public/: browser-check.html  client.js  index.html
server/scripts/: generate-matrix.mjs  generate-neural-network-data.mjs  generate-sort-data.mjs  submit-ecm.mjs  submit-task.mjs  test-chunking.mjs  test-ecm-stage1.mjs  test-ecm.mjs  test-endpoints.mjs  test-neural-network.mjs  test-sorting.mjs  test-transformer.mjs
server/strategies/: AttentionAssemblyStrategy.js  AttentionChunkingStrategy.js  BlockMatrixAssemblyStrategy.js  BlockMatrixChunkingStrategy.js  ChunkingStrategyRegistry.js  DistributedConvolutionAssemblyStrategy.js  DistributedConvolutionChunkingStrategy.js  DistributedSortAssemblyStrategy.js  DistributedSortChunkingStrategy.js  ECMStage1AssemblyStrategy.js  ECMStage1ChunkingStrategy.js  EnhancedChunkingManager.js  FeedForwardAssemblyStrategy.js  FeedForwardChunkingStrategy.js  LayerNormAssemblyStrategy.js  LayerNormChunkingStrategy,js  LayerNormChunkingStrategy.js  MatrixTiledAssemblyStrategy.js  MatrixTiledChunkingStrategy.js  SimpleNeuralNetworkAssemblyStrategy.js  SimpleNeuralNetworkChunkingStrategy.js  StreamingChunkingManager.js  TransformerBlockCoordinator.js
server/strategies/base/: BaseAssemblyStrategy.js  BaseChunkingStrategy.js  BaseExecutionStrategy.js
server/strategies/storage/: MatrixStore.js
